# play-ondas-app

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  Historias.md  LICENSE  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
.specify/workflows/: workflow-registry.json
play-ondas-app-design/: README.md  components.md  design-system.md  screens.md
play-ondas-app-design/prototype/: play-ondas-aire-prototype.html
play-ondas-app-design/tokens/: design-tokens.json  tailwind.config.js  tokens.css
public/audio/: AUDIO-CREDITS.md
specs/001-play-ondas-player/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/: App.svelte  app.css  tokens.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: copy.rs  mod.rs  paths.rs  tests.rs
src-tauri/src/commands/: audio.rs  download.rs  logging.rs  mod.rs  settings.rs  shortcuts.rs  tray.rs
src-tauri/src/config/: load.rs  mod.rs  persist.rs
src-tauri/src/download/: cleanup.rs  downloader.rs  mod.rs
src-tauri/src/logging/: bridge.rs  layer.rs  mod.rs
src-tauri/src/tray/: setup.rs
src/views/: MainView.svelte  (+1 more)
(+67 files in other folders)
