[package]
name = "play-ondas-app"
version = "1.0.1"
description = "Play Ondas app"
authors = ["Daniel Diez Mardomingo"]
edition = "2024"

[lib]
name = "play_ondas_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-dialog = "=2.2.0"
tauri-plugin-fs = "=2.2.0"
tauri-plugin-global-shortcut = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
nanoid = "0.4"
tokio = { version = "1.43", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.16"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
bytes = "1.0"
